samples/_failures_safe/1761378278_84d08d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21be93e8.c: In function ‘main’:
./samples/SAFE/__tmp_21be93e8.c:142:5: error: expected declaration or statement at end of input
  142 |     }
      |     ^
